# ChangeLog for dev-perl/AxKit
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/AxKit/ChangeLog,v 1.45 2006/09/05 13:40:20 gustavoz Exp $

  05 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org> AxKit-1.6.2.ebuild:
  Stable on sparc

  04 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  AxKit-1.5.2-r1.ebuild, AxKit-1.6-r1.ebuild, AxKit-1.6-r2.ebuild,
  AxKit-1.6.1.ebuild, AxKit-1.6.2.ebuild:
  Adding perl dep; fixed DEPEND

  03 Jul 2006; Christian Hartmann <ian@gentoo.org> AxKit-1.5.2-r1.ebuild,
  AxKit-1.6-r1.ebuild, AxKit-1.6-r2.ebuild, AxKit-1.6.1.ebuild,
  AxKit-1.6.2.ebuild:
  Fixed RDEPEND wrt bug #134781

  13 Feb 2006; <mcumming@gentoo.org> AxKit-1.5.2-r1.ebuild,
  AxKit-1.6-r1.ebuild, AxKit-1.6-r2.ebuild, AxKit-1.6.1.ebuild,
  AxKit-1.6.2.ebuild:
  Virtual for perl-core dep

  03 Oct 2005; Aron Griffis <agriffis@gentoo.org> AxKit-1.6.2.ebuild:
  Mark 1.6.2 stable on ia64

  26 Aug 2005; Aron Griffis <agriffis@gentoo.org> AxKit-1.6.2.ebuild:
  add ~ia64

  29 May 2005; Markus Rothe <corsair@gentoo.org> AxKit-1.6.2.ebuild:
  Stable on ppc64

  25 May 2005; Michael Cummings <mcummings@gentoo.org> AxKit-1.6.2.ebuild:
  dev-perl/Storable => perl-core/Storable migration

  25 May 2005; Michael Cummings <mcummings@gentoo.org> AxKit-1.6.1.ebuild:
  dev-perl/Storable => perl-core/Storable migration

  25 May 2005; Michael Cummings <mcummings@gentoo.org> AxKit-1.6-r2.ebuild:
  dev-perl/Storable => perl-core/Storable migration

  25 May 2005; Michael Cummings <mcummings@gentoo.org> AxKit-1.6-r1.ebuild:
  dev-perl/Storable => perl-core/Storable migration

  25 May 2005; Michael Cummings <mcummings@gentoo.org> AxKit-1.5.2-r1.ebuild:
  dev-perl/Storable => perl-core/Storable migration

  24 May 2005; Michael Cummings <mcummings@gentoo.org> AxKit-1.6-r1.ebuild,
  AxKit-1.6-r2.ebuild, AxKit-1.6.1.ebuild, AxKit-1.6.2.ebuild:
  dev-perl/Digest-MD5 => perl-core/Digest-MD5
