@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/AxKit/AxKit-1.6.2.ebuild,v 1.20 2006/09/05 13:40:20 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/AxKit/AxKit-1.6.2.ebuild,v 1.21 2006/09/17 07:57:26 dertobi123 Exp $
 
 inherit perl-module
 
@@ -14,7 +14,7 @@ HOMEPAGE="http://axkit.org/"
 IUSE="gnome"
 SLOT="0"
 LICENSE="|| ( Artistic GPL-2 )"
-KEYWORDS="alpha ~amd64 ia64 ~mips ~ppc ppc64 sparc ~x86"
+KEYWORDS="alpha ~amd64 ia64 ~mips ppc ppc64 sparc ~x86"
 
 DEPEND=">=www-apache/libapreq-1.0
 	>=dev-perl/Compress-Zlib-1.10
