@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Class-Accessor
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Accessor/ChangeLog,v 1.30 2006/09/17 02:49:01 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Accessor/ChangeLog,v 1.31 2006/09/17 07:58:12 dertobi123 Exp $
+
+  17 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org>
+  Class-Accessor-0.27.ebuild:
+  ppc stable
 
   17 Sep 2006; Michael Cummings <mcummings@gentoo.org> Manifest:
   Signing manifest
