@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/AxKit
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/AxKit/ChangeLog,v 1.45 2006/09/05 13:40:20 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/AxKit/ChangeLog,v 1.46 2006/09/17 07:57:26 dertobi123 Exp $
+
+  17 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org> AxKit-1.6.2.ebuild:
+  ppc stable
 
   05 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org> AxKit-1.6.2.ebuild:
   Stable on sparc
